// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags renders a default tag 1`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm bg-ink-300">
  <!----> Tag
  <!---->
</div>
`;

exports[`Tags renders with left icon 1`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm bg-ink-300">
  <z-icon-stub icon="star" size="small" position="" color="current"></z-icon-stub> Tag
  <!---->
</div>
`;

exports[`Tags renders with right icon 1`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm bg-ink-300">
  <!----> Tag <z-icon-stub icon="star" size="small" position="" color="current"></z-icon-stub>
</div>
`;

exports[`Tags renders with size 1`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm bg-ink-300">
  <z-icon-stub icon="star" size="small" position="" color="current"></z-icon-stub> Tag
  <!---->
</div>
`;

exports[`Tags renders with size 2`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm bg-ink-300">
  <z-icon-stub icon="star" size="large" position="" color="current"></z-icon-stub> Tag
  <!---->
</div>
`;

exports[`Tags renders with state 1`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm border-2 border-solid border-juniper bg-ink-300">
  <!----> Tag
  <!---->
</div>
`;

exports[`Tags renders with state 2`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm border-2 border-solid border-cherry bg-ink-300">
  <!----> Tag
  <!---->
</div>
`;

exports[`Tags renders with state 3`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm border-2 border-solid border-honey bg-ink-300">
  <!----> Tag
  <!---->
</div>
`;

exports[`Tags renders with state 4`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm border-2 border-solid border-aqua bg-ink-300">
  <!----> Tag
  <!---->
</div>
`;

exports[`Tags renders with state 5`] = `
<div class="inline-flex items-center space-x-2 rounded-full justify-evenly text-vanilla-100 py-1 px-4 text-sm bg-ink-300">
  <!----> Tag
  <!---->
</div>
`;
